[project]
name = "hms-map"
version = "0.1.0"
description = "A Model Context Protocol server and CLI tool for Huawei Map Kit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["map", "mcp", "huawei", "hms", "geocoding", "route-planning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
    "mcp>=1.2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.22",
]

[project.scripts]
hms-map = "hms_map.cli:cli"
hms-map-mcp = "hms_map.server:main"

[project.urls]
Repository = "https://github.com/uulichen-sketch/hms-map"
Issues = "https://github.com/uulichen-sketch/hms-map/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hms_map"]
