[project]
name = "map-agent"
version = "0.1.0"
description = "Multi-provider Map MCP Server (Huawei/Gaode/Google) with SSE/streamable-http support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["map", "mcp", "huawei", "hms", "gaode", "google", "geocoding", "route-planning", "multi-provider", "sse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
    "mcp>=1.2.0",
    "pydantic>=2.0",
    "starlette>=0.27",
    "uvicorn[standard]>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.22",
]
transport = [
    "sse-starlette>=1.6",
]

[project.scripts]
map-agent = "map_agent.cli:cli"
map-agent-mcp = "map_agent.server:main"

[project.urls]
Repository = "https://github.com/uulichen-sketch/map-agent"
Issues = "https://github.com/uulichen-sketch/map-agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/map_agent"]
