[project]
name = "map-agent"
version = "1.0.0"
description = "Multi-provider Map MCP Server (Huawei/Gaode/Google) with SSE/streamable-http support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["map", "mcp", "huawei", "hms", "gaode", "google", "geocoding", "route-planning", "multi-provider", "sse"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=map_agent --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["src/map_agent"]
omonitor = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
    "mcp>=1.2.0",
    "pydantic>=2.0",
    "starlette>=0.27",
    "uvicorn[standard]>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "flake8>=6.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]
transport = [
    "sse-starlette>=1.6",
]

[project.scripts]
map-agent = "map_agent.cli:cli"
map-agent-mcp = "map_agent.server:main"

[project.urls]
Repository = "https://github.com/uulichen-sketch/map-agent"
Issues = "https://github.com/uulichen-sketch/map-agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/map_agent"]
